--- a/.classpath
+++ b/.classpath
@@ -6,9 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/usr/local/leJOS_NXJ_0.9.1beta-3/lib/pc/pccomm.jar"/>
-	<classpathentry kind="lib" path="/usr/local/leJOS_NXJ_0.9.1beta-3/lib/pc/3rdparty/bluecove.jar"/>
-	<classpathentry kind="lib" path="/usr/local/leJOS_NXJ_0.9.1beta-3/lib/pc/3rdparty/bluecove-gpl.jar"/>
-	<classpathentry kind="lib" path="/usr/local/leJOS_NXJ_0.9.1beta-3/lib/pc/pctools.jar"/>
+	<classpathentry kind="con" path="org.lejos.nxt.ldt.LEJOS_LIBRARY_CONTAINER/nxt"/>
+	<classpathentry kind="lib" path="classes.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
